--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.8"
-dependencies = []
+dependencies = [
+    "cherrypy>=18.10.0",
+    "opencv-python>=4.12.0.88",
+    "pyyaml>=6.0.3",
+    "tqdm>=4.67.1",
+]
