--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,12 @@ readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
     "cherrypy>=18.10.0",
+    "dash>=3.3.0",
+    "numpy>=1.24.4",
+    "open3d>=0.19.0",
     "opencv-python>=4.12.0.88",
+    "pyjson>=1.4.1",
     "pyyaml>=6.0.3",
     "tqdm>=4.67.1",
+    "typing-extensions>=4.13.2",
 ]
