--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "opencv-python>=4.12.0.88",
     "pyjson>=1.4.1",
     "pyyaml>=6.0.3",
+    "scikit-learn>=1.3.2",
     "tqdm>=4.67.1",
     "typing-extensions>=4.13.2",
 ]
