--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "numpy>=1.24.4",
     "open3d>=0.19.0",
     "opencv-python>=4.12.0.88",
+    "protobuf>=5.29.5",
     "pyjson>=1.4.1",
     "pyyaml>=6.0.3",
     "scikit-learn>=1.3.2",
